syntax = "proto3";

package main;

option go_package = "./proto";


// 添加菜单信息表
message AddMenuReq {
  int64 id = 1; //编号
  string menu_name = 2; //菜单名称
  int64 parent_id = 3; //父菜单ID，一级菜单为0
  string menu_path = 4; //前端路由
  string menu_perms = 5; //权限标识
  int32 menu_type = 6; //类型 0：目录,1：菜单,2：按钮,3：外链
  string menu_icon = 7; //菜单图标
  int32 menu_sort = 8; //菜单排序
  string create_by = 9; //创建者
  string create_time = 10; //创建时间
  string update_by = 11; //更新者
  string update_time = 12; //更新时间
  int32 menu_status = 13; //菜单状态
  int32 is_deleted = 14; //是否删除  0：否  1：是
  int32 is_visible = 15; //是否可见  0：否  1：是
  string remark = 16; //备注信息
  string vue_path = 17; //vue系统的path
  string vue_component = 18; //vue的页面
  string vue_icon = 19; //vue的图标
  string vue_redirect = 20; //vue的路由重定向
  string background_url = 21; //接口地址

}

message AddMenuResp {
  string pong = 1;
}

// 删除菜单信息表
message DeleteMenuReq {
  repeated int64 ids = 1;
}

message DeleteMenuResp {
  string pong = 1;
}

// 更新菜单信息表
message UpdateMenuReq {
  int64 id = 1; //编号
  string menu_name = 2; //菜单名称
  int64 parent_id = 3; //父菜单ID，一级菜单为0
  string menu_path = 4; //前端路由
  string menu_perms = 5; //权限标识
  int32 menu_type = 6; //类型 0：目录,1：菜单,2：按钮,3：外链
  string menu_icon = 7; //菜单图标
  int32 menu_sort = 8; //菜单排序
  string create_by = 9; //创建者
  string create_time = 10; //创建时间
  string update_by = 11; //更新者
  string update_time = 12; //更新时间
  int32 menu_status = 13; //菜单状态
  int32 is_deleted = 14; //是否删除  0：否  1：是
  int32 is_visible = 15; //是否可见  0：否  1：是
  string remark = 16; //备注信息
  string vue_path = 17; //vue系统的path
  string vue_component = 18; //vue的页面
  string vue_icon = 19; //vue的图标
  string vue_redirect = 20; //vue的路由重定向
  string background_url = 21; //接口地址
}

message UpdateMenuResp {
  string pong = 1;
}

// 更新菜单信息表状态
message UpdateMenuStatusReq {
  int64 id = 1; //编号
  int32 menu_status = 2; //菜单状态
  string update_by = 3; //更新者

}

message UpdateMenuStatusResp {
  string pong = 1;
}

// 查询菜单信息表详情
message QueryMenuDetailReq {
  int64 id = 1;
}

message QueryMenuDetailResp {
  int64 id = 1; //编号
  string menu_name = 2; //菜单名称
  int64 parent_id = 3; //父菜单ID，一级菜单为0
  string menu_path = 4; //前端路由
  string menu_perms = 5; //权限标识
  int32 menu_type = 6; //类型 0：目录,1：菜单,2：按钮,3：外链
  string menu_icon = 7; //菜单图标
  int32 menu_sort = 8; //菜单排序
  string create_by = 9; //创建者
  string create_time = 10; //创建时间
  string update_by = 11; //更新者
  string update_time = 12; //更新时间
  int32 menu_status = 13; //菜单状态
  int32 is_deleted = 14; //是否删除  0：否  1：是
  int32 is_visible = 15; //是否可见  0：否  1：是
  string remark = 16; //备注信息
  string vue_path = 17; //vue系统的path
  string vue_component = 18; //vue的页面
  string vue_icon = 19; //vue的图标
  string vue_redirect = 20; //vue的路由重定向
  string background_url = 21; //接口地址
}

// 分页查询菜单信息表列表
message QueryMenuListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  string menu_name = 3; //菜单名称
  int64 parent_id = 4; //父菜单ID，一级菜单为0
  int32 menu_status = 5; //菜单状态
}

message MenuListData {
  int64 id = 1; //编号
  string menu_name = 2; //菜单名称
  int64 parent_id = 3; //父菜单ID，一级菜单为0
  string menu_path = 4; //前端路由
  string menu_perms = 5; //权限标识
  int32 menu_type = 6; //类型 0：目录,1：菜单,2：按钮,3：外链
  string menu_icon = 7; //菜单图标
  int32 menu_sort = 8; //菜单排序
  string create_by = 9; //创建者
  string create_time = 10; //创建时间
  string update_by = 11; //更新者
  string update_time = 12; //更新时间
  int32 menu_status = 13; //菜单状态
  int32 is_deleted = 14; //是否删除  0：否  1：是
  int32 is_visible = 15; //是否可见  0：否  1：是
  string remark = 16; //备注信息
  string vue_path = 17; //vue系统的path
  string vue_component = 18; //vue的页面
  string vue_icon = 19; //vue的图标
  string vue_redirect = 20; //vue的路由重定向
  string background_url = 21; //接口地址

}

message QueryMenuListResp {
  int64 total = 1;
  repeated  MenuListData list = 2;
}

// 菜单信息表
service MenuService {
  // 添加菜单信息表
  rpc AddMenu(AddMenuReq) returns (AddMenuResp){}
  // 删除菜单信息表
  rpc DeleteMenu(DeleteMenuReq) returns (DeleteMenuResp){}
  // 更新菜单信息表
  rpc UpdateMenu(UpdateMenuReq) returns (UpdateMenuResp){}
  // 更新菜单信息表状态
  rpc UpdateMenuStatus(UpdateMenuStatusReq) returns (UpdateMenuStatusResp){}
  // 查询菜单信息表详情
  rpc QueryMenuDetail(QueryMenuDetailReq) returns (QueryMenuDetailResp){}
  // 查询菜单信息表列表
  rpc QueryMenuList(QueryMenuListReq) returns (QueryMenuListResp){}
  rpc QueryMenuResourceList(QueryMenuListReq) returns (QueryMenuListResp){}


}
